# better_code_example

./: README.md  pyproject.toml  test_spot_detection.py
data/: sample_image.tif
notebook/: spot_detection.ipynb
src/spot_detection/: __init__.py  logger.py  parameters.py  spot_detection.py  utilities.py
